hphp/test/slow/dv_array/parse-error1.php.expectf

Fatal error: syntax error, unexpected ',', expecting ']' in %s/parse-error1.php on line 4
